--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,61 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Gitignore for Next.js (with Bun, Tailwind, Biome)
 
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+/.bun
+/bun.lockb
 
-# testing
-/coverage
-
-# next.js
+# Next.js production build output
 /.next/
 /out/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Production dependencies (npm-debug.log)
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+.pnpm-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Biome ignores
+# Biome's own cache
+/.biome/
 
-# vercel
-.vercel
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Next.js specific build files
+.next/
+out/
+.next/
+!/.next/static # Keep static assets often deployed
+
+# Runtime data
+/tmp
+.turbo/
+
+# Editor/IDE specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+
+# Local data (e.g., SQLite databases)
+*.sqlite
+*.sqlite3
+
+# Test coverage
+/coverage
+
+# Vercel specific (if not handled by .vercel/output)
+.vercel/output/
+
+# Mac specific files
+.DS_Store
