--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^44.7.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
