--- a/cli/package.json
+++ b/cli/package.json
@@ -11,10 +11,10 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@effect/cli": "^0.69.0",
-    "@effect/platform": "^0.95.0",
-    "@effect/platform-node": "^0.95.0",
-    "effect": "^3.17.7",
+    "@effect/cli": "*",
+    "@effect/platform": "*",
+    "@effect/platform-node": "*",
+    "effect": "*",
     "@notionhq/client": "^2.3.0",
     "zod": "^3.25.76",
     "dotenv": "^16.6.1",
