--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "wetware-software",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "cli",
+    "."
+  ],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -16,7 +20,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
-    "ai": "^5.0.22",
+    "ai": "^5.0.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
@@ -29,12 +33,12 @@
     "vercel": "^44.7.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.0",
+    "@biomejs/biome": "^2.2.2",
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^20.19.11",
     "@types/node-fetch": "^2.6.13",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tw-animate-css": "^1.3.7",
