ci: use bun in CI and deploy with Vercel CLI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,21 +17,32 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
+      - name: Install Bun
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "${HOME}/.bun/bin" >> $GITHUB_PATH
+
+      - name: Check Vercel secrets
+        run: |
+          if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then echo "VERCEL_TOKEN is not set"; exit 1; fi
+          if [ -z "${{ secrets.VERCEL_ORG_ID }}" ]; then echo "VERCEL_ORG_ID is not set"; exit 1; fi
+          if [ -z "${{ secrets.VERCEL_PROJECT_ID }}" ]; then echo "VERCEL_PROJECT_ID is not set"; exit 1; fi
+
+      - name: Install dependencies (bun)
         run: |
           cd apps/web
-          npm ci
+          bun install
 
-      - name: Build app
+      - name: Build app (bun)
         run: |
           cd apps/web
-          npm run build
+          bun run build
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: apps/web
-          prod: true
+      - name: Deploy to Vercel (CLI)
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          cd apps/web
+          # Install vercel temporarily and deploy non-interactively using the token
+          npm ci --package-lock-only || true
+          npx vercel --prod --confirm --token "$VERCEL_TOKEN"
