--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "bun run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "bun install",
+  "installCommand": "bash -lc \"if ! command -v bun >/dev/null 2>&1; then curl -fsSL https://bun.sh/install | bash; export PATH=\"$HOME/.bun/bin:$PATH\"; fi && bun install\"",
   "devCommand": "bun run dev",
   "functions": {
     "src/app/api/**/*.ts": {
