--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,10 @@
 {
-  "root": "apps/web",
-  "buildCommand": "bun run build",
-  "outputDirectory": ".next",
+  "buildCommand": "cd apps/web && bun run build",
+  "outputDirectory": "apps/web/.next",
   "framework": "nextjs",
   "installCommand": "bash -lc \"if ! command -v bun >/dev/null 2>&1; then curl -fsSL https://bun.sh/install | bash; export PATH=\"$HOME/.bun/bin:$PATH\"; fi && bun install\"",
-  "devCommand": "bun run dev",
-  "functions": {
-    "src/app/api/**/*.ts": {
-      "runtime": "@vercel/node"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ],
+  "devCommand": "cd apps/web && bun run dev",
   "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=300, s-maxage=600"
-        }
-      ]
-    },
     {
       "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2))$",
       "headers": [
