--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
     "@notionhq/client": "^4.0.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
-    "@wetware/shared": "workspace:*",
+    "@wetware/shared": "0.1.0",
     "ai": "^5.0.37",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
