--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "prebuild": "node scripts/check-env.js",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
