--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:web": "cd apps/web && bun run dev",
     "dev:cli": "cd packages/cli && bun run dev",
     "build:all": "bun run build:shared && bun run build:web && bun run build:cli",
-    "build:web": "cd apps/web && bun run build",
+    "build:web": "cd apps/web && bun run prebuild && bun run build",
     "build:cli": "cd packages/cli && bun run build",
     "build:shared": "cd packages/shared && bun run build",
     "test:all": "bun run test:cli",
