feat(web): improve sidebar appearance
Remove search widget and increase series title text size.

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "bun install && cd ../.. && bun run build:web",
-  "outputDirectory": "apps/web/.next",
+  "buildCommand": "bun install && bun run build",
+  "outputDirectory": ".next",
   "framework": "nextjs",
-  "regions": [
-    "iad1"
-  ]
+  "regions": ["iad1"]
 }
