feat(web): enhance build process and update environment variable handling
- Added a build script to streamline the build process.
- Updated prebuild script to use .mjs extension for better compatibility.
- Refactored Tailwind CSS configuration to utilize OKLCH color space for improved color management.
- Introduced new images and adjusted layout components for better visual consistency.
- Enhanced TypeScript configuration for improved path resolution and module handling.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "prebuild": "node scripts/check-env.js",
+    "prebuild": "node scripts/check-env.mjs",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
