--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev:web": "cd apps/web && bun run dev",
     "dev:cli": "cd packages/cli && bun run dev",
+    "build": "bun run build:all",
     "build:all": "bun run build:shared && bun run build:web && bun run build:cli",
     "build:web": "cd apps/web && bun run prebuild && bun run build",
     "build:cli": "cd packages/cli && bun run build",
