fix(vercel): install from monorepo root and use workspace:* for @wetware/shared; build Next from app dir

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,6 +1,9 @@
 {
-  "buildCommand": "bun install && bun run build",
+  "installCommand": "bun install --cwd ../..",
+  "buildCommand": "bun run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": [
+    "iad1"
+  ]
 }
