--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,8 @@
     "@notionhq/client": "^4.0.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
-    "@wetware/shared": "0.1.0",
-    "ai": "^5.0.37",
+    "@wetware/shared": "workspace:*",
+    "ai": "^5.0.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
@@ -29,7 +29,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^44.7.3",
+    "vercel": "^48.0.2",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
@@ -37,13 +37,13 @@
     "workbox-strategies": "^7.3.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.3",
-    "@next/bundle-analyzer": "^15.5.2",
+    "@biomejs/biome": "^2.2.4",
+    "@next/bundle-analyzer": "^15.5.3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20.19.13",
+    "@types/node": "^20.19.16",
     "@types/node-fetch": "^2.6.13",
-    "@types/react": "^19.1.12",
+    "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
