## 🚀 **Major UI/UX Improvements & Component Refactoring**
### **PostCard Enhancements:**
- Remove Article/Essay type badges for cleaner design
- Move publication date to bottom right corner
- Position Series info in top right corner of card
- Add tooltips to focus area icons
- Update dark mode border to light grey
- Double focus icon size multiple times for better visibility

### **LatestPosts Component:**
- Remove Essays and Articles navigation selectors
- Double size of Cards/List view toggle buttons
- Increase title and subtitle text sizes
- Reorganize top line: icon + title + series layout

### **List View Improvements:**
- Remove all borders for borderless design
- Move Series column before Date column
- Refactor PostListItem to use TanStack Table for better maintainability
- Fix hydration error from nested Link components

### **Header Navigation:**
- Increase menu text size by one level
- Change menu text color to charcoal
- Make menu text semi-bold
- Remove underline from hover effects

### **Technical Improvements:**
- Add @tanstack/react-table dependency
- Implement type-safe table component architecture
- Improve component organization and maintainability
- Fix React hydration errors

### **Files Modified:**
- [PostCard.tsx](cci:7://file:///Users/paul/Projects/wetware-software/apps/web/src/components/PostCard.tsx:0:0-0:0) - Layout and styling updates
- [PostListItem.tsx](cci:7://file:///Users/paul/Projects/wetware-software/apps/web/src/components/PostListItem.tsx:0:0-0:0) - Complete TanStack Table refactor
- [LatestPosts.tsx](cci:7://file:///Users/paul/Projects/wetware-software/apps/web/src/components/LatestPosts.tsx:0:0-0:0) - UI improvements and layout changes
- [Header.tsx](cci:7://file:///Users/paul/Projects/wetware-software/apps/web/src/components/Header.tsx:0:0-0:0) - Navigation styling enhancements
- [package.json](cci:7://file:///Users/paul/Projects/wetware-software/apps/web/package.json:0:0-0:0) - Added table library dependency

**Result:** Signi

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,9 @@
     "@notionhq/client": "^4.0.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-table": "^8.21.3",
     "@wetware/shared": "workspace:*",
-    "ai": "^5.0.44",
+    "ai": "^5.0.45",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
