--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "format": "bunx biome format --write ./src",
     "lint:fix": "bunx biome check --apply-unsafe ./src",
-    "check": "bunx biome check ./src"
+    "check": "bunx biome check ./src",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@notionhq/client": "^4.0.2",
@@ -19,36 +21,39 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "@wetware/shared": "workspace:*",
-    "ai": "^5.0.45",
+    "ai": "^5.0.51",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^48.0.2",
+    "vercel": "^48.1.6",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-strategies": "^7.3.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@next/bundle-analyzer": "^15.5.3",
+    "@next/bundle-analyzer": "^15.5.4",
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20.19.16",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.19.17",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.2",
+    "vitest": "^1.6.1",
+    "@vitejs/plugin-react": "^4.7.0"
   }
 }
