--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,18 +21,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "@wetware/shared": "workspace:*",
-    "ai": "^5.0.59",
+    "ai": "^5.0.60",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.536.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^48.1.6",
+    "vercel": "^48.2.0",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
@@ -41,19 +42,19 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.4",
+    "@biomejs/biome": "^2.2.5",
     "@next/bundle-analyzer": "^15.5.4",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^20.19.18",
+    "@types/node": "^20.19.19",
     "@types/node-fetch": "^2.6.13",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vitest": "^1.6.1"
   }
 }
