--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,12 +47,15 @@
     "@next/bundle-analyzer": "^15.5.4",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.19",
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/node": "^20.19.19",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "happy-dom": "^20.0.7",
+    "jsdom": "^27.0.1",
     "postcss": "^8.5.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
