--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,19 +22,19 @@
     "@tanstack/react-table": "^8.21.3",
     "@wetware/shared": "workspace:*",
     "@wetware/design-system": "workspace:*",
-    "ai": "^5.0.63",
+    "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
-    "next": "^15.5.4",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "vercel": "^48.2.9",
+    "vercel": "^48.5.0",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
@@ -43,19 +43,20 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.5",
-    "@next/bundle-analyzer": "^15.5.4",
+    "@biomejs/biome": "^2.2.6",
+    "@next/bundle-analyzer": "^16.0.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
-    "@types/node": "^20.19.19",
+    "@testing-library/react": "^16.3.0",
+    "eslint-plugin-react-hooks": "^6.0.0",
+    "@types/node": "^20.19.23",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
-    "happy-dom": "^20.0.7",
-    "jsdom": "^27.0.1",
+    "linkedom": "^0.18.0",
     "postcss": "^8.5.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
