--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,4 +1,5 @@
 {
+  "installCommand": "cd ../.. && bun install",
   "buildCommand": "cd ../.. && bun install && cd apps/web && bun run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
