chore: streamline Vercel deployment configuration and optimize monorepo build setup
- Replace manual Bun installation with official oven-sh/setup-bun action in GitHub workflow
- Add Vercel deployment step with token authentication to workflow
- Update build commands to use bun --bun runtime flag for better performance
- Add vercel.json configurations at both root and app level for proper monorepo support
- Create custom build/install scripts (vercel-build.sh, vercel-install.sh) for deployment
-

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wetware-software",
   "version": "0.2.0",
   "private": true,
-  "packageManager": "bun@1.2.23",
+  "packageManager": "bun@1.x",
   "workspaces": [
     "apps/*",
     "packages/*",
@@ -23,16 +23,6 @@
     "check": "bunx ultracite check apps/ packages/",
     "bootstrap": "bun install"
   },
-  "dependencies": {
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "effect-env": "^0.3.0",
-    "react-syntax-highlighter": "^16.1.0",
-    "tailwindcss-fluid-typography": "^1.0.5",
-    "vercel": "^48.10.2"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.0",
-    "typescript": "^5.9.3",
-    "ultracite": "6.0.4"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
