--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,18 @@ jobs:
           node-version: '20'
 
       - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo "${HOME}/.bun/bin" >> $GITHUB_PATH
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-      - name: Install dependencies (bun)
-        run: |
-          cd apps/web
-          bun install
+      - name: Install dependencies
+        run: bun install
 
-      - name: Build app (bun)
-        run: |
-          cd apps/web
-          bun run build
+      - name: Build app
+        run: bun run build:web
 
+      - name: Deploy to Vercel
+        run: |
+          bunx vercel deploy --prod --token=$VERCEL_TOKEN
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
