--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "node scripts/check-env.mjs",
-    "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
-    "start": "next start",
+    "build": "bun --bun next build",
+    "build:analyze": "ANALYZE=true bun --bun next build",
+    "start": "bun --bun next start",
     "lint": "next lint",
     "format": "bunx biome format --write ./src",
     "lint:fix": "bunx biome check --apply-unsafe ./src",
@@ -23,9 +23,10 @@
     "@wetware/design-system": "workspace:*",
     "@wetware/shared": "workspace:*",
     "ai": "^5.0.95",
-    "effect": "^3.19.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "effect": "^3.19.4",
+    "effect-env": "^0.3.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
     "next": "^16.0.3",
@@ -35,7 +36,6 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "effect-env": "^0.3.0",
     "vercel": "^48.10.4",
     "workbox-core": "^7.4.0",
     "workbox-expiration": "^7.4.0",
