Add 'What's New' badge for resources with recent GitHub releases
- Add GitHub release checking utility to detect major/minor releases within past week
- Create WhatsNewBadge component with tooltip showing release notes
- Add API route for fetching GitHub release information
- Update ResourceCard to display 'What's New' badge for resources with GitHub repos
- Add effect-json to curated resources with GitHub repo tracking
- Add shadcn/ui tooltip component for hover tooltips

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -5,6 +5,11 @@ NOTION_API_KEY=xxxxxx
 NOTION_DATABASE_ID_BLOG_POSTS=xxxxxx
 NOTION_DATABASE_ID_SERIES=xxxxxx
 
+# Optional: GitHub API Token (increases rate limit from 60 to 5000 requests/hour)
+# Create a personal access token at https://github.com/settings/tokens
+# Only needs 'public_repo' scope for reading public repository data
+GITHUB_TOKEN=your_github_personal_access_token_here
+
 # Optional SDK keys (do not commit real values)
 OPENAI_API_KEY=sk-xxxx
 ANTHROPIC_API_KEY=sk-ant-xxxx
